--- a/.github/workflows/update-meta-ips.yml
+++ b/.github/workflows/update-meta-ips.yml
@@ -2,8 +2,8 @@ name: Update Meta IPs
 
 on:
   schedule:
-    - cron: '0 3 * * *'  # هر روز ساعت 3 صبح UTC (5:30 ایران)
-  workflow_dispatch:      # اجرای دستی
+    - cron: '0 3 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -21,8 +21,8 @@ jobs:
 
     - name: Fetch Meta IP prefixes
       run: |
-        curl -s "https://api.bgpview.io/asn/32934/prefixes" \
-        | jq -r '.data.ipv4_prefixes[],.data.ipv6_prefixes[] | .prefix' \
+        curl -s "https://developers.facebook.com/static/docs/graph-api/ip-ranges/ip-ranges.json" \
+        | jq -r '.prefixes[] | select(.ip_prefix != null) | .ip_prefix' \
         > meta-ips.txt
 
     - name: Commit & Push changes
