--- a/.github/workflows/update-meta-ips.yml
+++ b/.github/workflows/update-meta-ips.yml
@@ -19,18 +19,13 @@ jobs:
     - name: Install jq
       run: sudo apt-get update && sudo apt-get install -y jq
 
-    - name: Download JSON
+    - name: Fetch Meta IP prefixes
       run: |
-        wget -O meta.json https://www.facebook.com/ips/meta.json
-
-    - name: Extract prefixes
-      run: |
-        cat meta.json | jq -r '.prefixes[] | select(.ip_prefix != null) | .ip_prefix' > meta-ips.txt
+        curl -s "https://api.bgpview.io/asn/32934/prefixes" \
+        | jq -r '.data.ipv4_prefixes[]?.prefix, .data.ipv6_prefixes[]?.prefix' \
+        > meta-ips.txt
 
     - name: Commit & Push changes
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git add meta-ips.txt
-        git commit -m "Update Meta IP list automatically" || echo "No changes to commit"
-        git push
